fix mobile alignment and style for project description

--- a/client/src/pages/main.css
+++ b/client/src/pages/main.css
@@ -21,6 +21,10 @@
   /* scroll-snap-align: start; */
 }
 
+ul {
+  padding-inline-start: 1rem
+}
+
 /* @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
 only screen and (min-device-pixel-ratio: 1.5) {
   .parts > * {
